deploy/k8s/ircfiber-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ircfiber-prod
  labels:
    kubernetes.io/metadata.name: ircfiber-prod
    project: ircfiber-prod
