deploy/k8s/ircfiber-prod/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ovh-prod-db-and-mullvad
  namespace: ircfiber-prod
spec:
  podSelector: {}
  policyTypes: [Egress, Ingress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ircfiber
      ports:
        - port: 1055
          protocol: TCP
    - ports:
        - port: 1080
          protocol: TCP
        - port: 1081
          protocol: TCP
        - port: 1082
          protocol: TCP
        - port: 6379
          protocol: TCP
        - port: 27017
          protocol: TCP
        - port: 4318
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ircfiber-prod
      ports:
        - port: 8091
          protocol: TCP
